# contract-v2

./: Anchor.toml  README.md
programs/contract-v2/: Cargo.toml
programs/contract-v2/src/: lib.rs
programs/cubik_contract/: Cargo.toml
programs/cubik_contract/src/: lib.rs
programs/cubik_contract/src/instructions/: badge.rs  contribution.rs  create_round.rs  mod.rs  project.rs  round_join_request.rs  update_verfication.rs  user.rs
programs/cubik_contract/src/state/: contribution.rs  mod.rs  project.rs  round.rs  user.rs
tests/: contract-v2.ts
